# diagon

./: .clang-format  .editorconfig  .gitignore  10M_COMPARISON_STATUS.md  12BIN_QUANTIZATION_RESULTS.md  ALPHA_PARAMETER_TUNING_RESULTS.md  ANALYZER_TEST_COVERAGE_ANALYSIS.md  ANALYZER_TEST_COVERAGE_REPORT.md  ANALYZER_UNIT_TESTS_COMPLETED.md  AVX512_ANALYSIS.md  BATCH_SCORING_RESULTS.md  BENCHMARK_DIAGON_SETUP.md  BENCHMARK_MULTITERM_SETUP.md  BENCHMARK_RESULTS.md  BENCHMARK_REUTERS_SETUP.md  BENCHMARK_SUMMARY.md  BENCHMARK_TEMPLATE_SETUP.md  BM25_SCORE_COLLECTION_ARCHITECTURE.md  BOOLEAN_QUERY_IMPLEMENTATION.md  BUG_FIX_RECALL_GAP.md  BUILD.md  BUILD_SKILL_SUMMARY.md  BUILD_SOLUTION_SUMMARY.md  BUILD_SOP.md  CLAUDE.md  CLAUDE_MD_SKILLS_UPDATE.md  CMakeLists.txt  COMPARISON_GUIDE.md  COMPILATION_FIX_SUMMARY.md  COMPLETE_COMPARISON_STATUS.md  CONTRIBUTING.md  DIAGON_VS_LUCENE.md  FAIR_COMPARISON_RESULTS.md  FINAL_10M_COMPARISON.md  FINAL_QBLOCK_ALIGNMENT_SUMMARY.md  INDEXING_OPTIMIZATION_RESULTS.md  INDEXING_PROFILING_REPORT.md  LUCENE104_BATCH_VALIDATION_RESULTS.md  LUCENE104_INTEGRATION_STATUS.md  LUCENE_10M_RESULTS.md  (+63 more)
benchmarks/: BENCHMARK_COMPARISON.md  BLOCKMAX_BUG_FIX.md  BLOOM_FILTER_BENCHMARK_RESULTS.md  BatchScoringBenchmark.cpp  BlockMaxQuantizedIndexBenchmark.cpp  BloomFilterBenchmark.cpp  CMakeLists.txt  ColumnarIngestionBenchmark.cpp  DOCUMENT_RETRIEVAL.md  FINAL_SUMMARY.md  FSTEfficiencyGate.cpp  FULL_8.8M_BENCHMARK_RESULTS.md  IndexingBenchmark.cpp  JsonIngestionBenchmark.cpp  Lucene104BatchBenchmark.cpp  Lucene104IntegrationValidation.cpp  LuceneComparisonBenchmark.cpp  LuceneCompatBenchmark.cpp  MMapDirectoryBenchmark.cpp  MicroBenchmark  MicroBenchmark.cpp  PostingsFormatBenchmark.cpp  PostingsOptimizationBenchmark.cpp  ProfileScatterAdd.cpp  ProfileWAND.cpp  QBLOCK_ALGORITHM_EXPLAINED.md  QBLOCK_ALGORITHM_IMPLEMENTATION.md  QBLOCK_BENCHMARK_RESULTS.md  REUTERS_APPLES_TO_APPLES_COMPARISON.md  ReutersWANDBenchmark.cpp  SIMDBenchmark.cpp  ScaleComparisonBenchmark.cpp  SearchBenchmark.cpp  StreamVByteSIMDBenchmark.cpp  TokenizerBenchmark.cpp  WINDOW_SIZE_COMPARISON.md  clickbench_benchmark.cpp  field_isolation_test.cpp  lucene_comparison.sh  multiblock_regression_test.cpp  (+5 more)
benchmarks/columnar/: ColumnarStore.h
benchmarks/dataset/: ClickBenchAdapter.h  LuceneDatasetAdapter.h  ReutersDatasetAdapter.h  SimpleReutersAdapter.h  SyntheticGenerator.h
benchmarks/java/: FairLuceneBenchmark.java  LuceneBenchmark.java  LuceneIngestionBenchmark.java  ScaleBenchmark.java  compile_and_run.sh  run_fair_benchmark.sh  run_scale_benchmark.sh
benchmarks/lucene_comparison/: CheckLuceneImpacts.java  CheckThreads.java  LuceneDetailedProfiler.java  LuceneMultiTermBenchmark.java  LuceneMultiTermFunctionProfile.java  LuceneMultiTermProfiler.java  ReutersWANDComparison.java  VerifyThreading.java  WANDComparison.java
src/columns/: CMakeLists.txt  README.md
src/compression/: CMakeLists.txt  README.md
src/core/: CMakeLists.txt  CMakeLists.txt.broken  CMakeLists_fixed.txt  README.md
src/simd/: CMakeLists.txt  README.md
tests/: CMakeLists.txt  README.md
tests/integration/: BasicEndToEndTest.cpp  EndToEndIndexingSearchTest.cpp  Lucene104IntegrationTest.cpp  Lucene104QueryTest.cpp
tests/manual/: validate_lucene104.cpp
tests/unit/analysis/: ASCIIFoldingFilterTest.cpp  AnalyzerFactoryTest.cpp  CompositeAnalyzerTest.cpp  KeywordTokenizerTest.cpp  LowercaseFilterTest.cpp  StopFilterTest.cpp  TokenTest.cpp  WhitespaceTokenizerTest.cpp
tests/unit/codecs/: BinaryDocValuesTest.cpp  BlockTreeFSTIntegrationTest.cpp  BlockTreeFSTTest.cpp  BlockTreeTest.cpp  CodecTest.cpp  DocValuesIntegrationTest.cpp  DocValuesMergeTest.cpp  LiveDocsFormatTest.cpp  Lucene104ReadWriteTest.cpp  Lucene105PostingsWriterTest.cpp  Lucene90BlockTreeTest.cpp  Lucene90ForUtilTest.cpp  Lucene90PostingsReaderTest.cpp  Lucene90StoredFieldsTest.cpp  LuceneFSTTest.cpp  NormsTest.cpp  NumericDocValuesIntegrationTest.cpp  NumericDocValuesReaderTest.cpp  NumericDocValuesWriterTest.cpp  OSCompatFormatsTest.cpp  OSCompatPostingsTest.cpp  PostingsReaderTest.cpp  PostingsWriterReaderRoundTripTest.cpp  PostingsWriterTest.cpp  SimpleFieldsProducerTest.cpp  SortedDocValuesTest.cpp  SortedNumericDocValuesTest.cpp  SortedSetDocValuesTest.cpp  StoredFieldsIntegrationTest.cpp  StoredFieldsReaderTest.cpp  StoredFieldsWriterTest.cpp  StreamVBytePostingsDebugTest.cpp  StreamVBytePostingsRoundTripTest.cpp  WriterFormatValidationTest.cpp
tests/unit/columns/: ColumnTest.cpp
tests/unit/compression/: CompressionTest.cpp
tests/unit/document/: ArrayFieldTest.cpp  DocumentTest.cpp  JsonDocumentParserTest.cpp  SparseVectorFieldTest.cpp
tests/unit/granularity/: GranularityTest.cpp
tests/unit/index/: BKDTreeTest.cpp  CacheHelperTest.cpp  ConcurrentMergeTest.cpp  DeletionIntegrationTest.cpp  DirectoryReaderTest.cpp  DocumentsWriterPerThreadTest.cpp  DocumentsWriterTest.cpp  FieldInfoTest.cpp  ForceMergeDebugTest.cpp  ForceMergeTest.cpp  FreqProxTermsWriterTest.cpp  IndexMappingTest.cpp  IndexReaderTest.cpp  IndexWriterIntegrationTest.cpp  IndexWriterRollbackTest.cpp  IndexWriterTest.cpp  MaybeMergeTest.cpp  MemoryLeakTest.cpp  MergeCommitPointTest.cpp  MergeTest.cpp  NormsIntegrationTest.cpp  ReaderReopenTest.cpp  SegmentFlushTest.cpp  SegmentInfoTest.cpp  SegmentInfosReadTest.cpp  SegmentReaderTest.cpp  SkipIndexTest.cpp  TieredMergePolicyTest.cpp
tests/unit/mergetree/: MergeTreeTest.cpp
tests/unit/observability/: ObservabilityTest.cpp
tests/unit/search/: BM25CorrectnessTest.cpp  BM25NormsIntegrationTest.cpp  BM25PerformanceGuard.cpp  BM25ScorerSIMDTest.cpp  BoolConjunctionBugTest.cpp  BooleanQueryTest.cpp  FilterTest.cpp  IndexSearcherTest.cpp  NormsDebugTest.cpp  NumericRangeQueryTest.cpp  PhraseQueryTest.cpp  PointRangeQueryTest.cpp  QueryCorrectnessTest.cpp  QueryEdgeCasesTest.cpp  SearchTest.cpp  TopScoreDocCollectorTest.cpp
tests/unit/simd/: SIMDStorageTest.cpp
tests/unit/sparse/: ForwardIndexTest.cpp  QBlockIndexTest.cpp  (+3 more)
tools/: CMakeLists.txt  Lucene90TermLookupValidator.cpp  LuceneFormatValidator.cpp
(+520 files in other folders)
